removed addPost function

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 			<!--Add Image Button-->
 			<div id="addImage">
-				<button onclick="addPost()" id="addPost" title="Add Image">Add Image</button>
+				<button onclick="" id="addPost" title="Add Image">Add Image</button>
 			</div>
 
 			<!--Search Box-->
