Removed Add Image Button

--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
 				<button onclick="topFunction()" id="logoButton" title="Go to top">Kevin's Website</button>
 			</div>
 
-			<!--Add Image Button-->
-			<div id="addImage">
-				<button onclick="" id="addPost" title="Add Image">Add Image</button>
-			</div>
-
 			<!--Search Box-->
 			<div class="searchBox" id="searchBox">
 				<input type="text" name="search" id="searchbar" placeholder="Search">
@@ -54,7 +49,7 @@
 
 
 
-		<!--TIMELINE-->
+		<!--TIMELINE DIV-->
 		<div class="timeline" id="timeline">
 
 			
@@ -63,9 +58,7 @@
 
 
 
-
-
-	<!--UPLOAD IMAGE TEST-->
+	<!--UPLOAD IMAGE-->
 	<div class="upload">
 		<h2>Upload</h2>
 		<input type="text" id="imageCaption" placeholder="Write a Caption">
@@ -76,13 +69,5 @@
 
 	<button type="button" class="myBTN" id="signMeOut" onclick="signOut()">SIGN OUT</button>
 
-
-
-
-
-
-
-
 </body>
-
 </html>
